[project]
name = "python-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cocoindex>=0.3.37",
    "google-genai>=1.70.0",
    "sentence-transformers>=3.3.0",
    "psycopg[binary]>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
